2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/bit_packed_array3.adb: New test.

2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/warn4.adb: New test.

2008-05-17  Paul Thomas  <pault@gcc.gnu.org>

	Backport from mainline:
	PR fortran/35756
	PR fortran/35759
	* gfortran.dg/where_1.f90: New test.

	PR fortran/35743
	PR fortran/35745
	* gfortran.dg/where_2.f90: New test.

	PR fortran/36233
	* gfortran.dg/actual_procedure_1.f90: New test

2008-05-15  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36245
	* gcc.c-torture/compile/pr36245.c: New testcase.

2008-05-15  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/discr8.ad[sb]: New test.
	* gnat.dg/discr8_pkg[123].ads: New helpers.

2008-05-14  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/36098
	* gcc.dg/vect/vect.exp: Compile with -O3 all the tests named "O3-*".
	* gcc.dg/vect/O3-pr36098.c: New test.

2008-05-13  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/35997
	* gfortran.dg/use_rename_3.f90

2008-05-13  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36227
	* gcc.dg/pr36227.c: New testcase.

2008-05-13  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/discr7.adb: New test
	* gnat.dg/conv_integer.adb: Likewise.

2008-05-12  Ira Rosen  <irar@il.ibm.com>

	* gfortran.dg/vect/pr36119.f: Rename to ...
	* gfortran.dg/vect/O3-pr36119.f90: ... this. Compile for all targets
	with -O3.

2008-05-11  Volker Reichelt  <v.reichelt@netcologne.de>

	PR c++/35578
	* g++.dg/parse/friend8.C: New test.

2008-05-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/36187
	* g++.dg/opt/pr36187.C: New testcase.

2008-05-08  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36154
	* gcc.c-torture/compile/pr36154.c: New testcase.

2008-05-08  Richard Guenther  <rguenther@suse.de>

	PR middle-end/36172
	* gcc.c-torture/compile/pr36172.c: New testcase.

2008-05-07  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/36013