@@ -1,3 +1,8 @@
+2008-05-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/36090
+	* gcc.c-torture/execute/20080502-1.c: New test.
+
 2008-05-17  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/bit_packed_array3.adb: New test.
